# plast-mem

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  cspell.config.yaml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  flake.nix
.github/workflows/: sync-upstream.yml
.jules/: sentinel.md
crates/ai/src/: cosine_similarity.rs  embed.rs  embed_shared.rs  generate_object.rs  generate_text.rs  lib.rs
crates/core/src/: lib.rs  message_queue.rs
crates/core/src/memory/: creation.rs  episodic.rs  semantic.rs
crates/core/src/memory/episodic/: mod.rs
crates/core/src/memory/semantic/: consolidation.rs  mod.rs
crates/core/src/message_queue/: boundary.rs  pending_reviews.rs
crates/db_migration/: Cargo.toml
crates/db_migration/src/: lib.rs  m20260206_02_create_episodic_memory_table.rs  main.rs
crates/db_schema/: Cargo.toml
crates/db_schema/src/: episodic_memory.rs  lib.rs  prelude.rs
crates/entities/src/: episodic_memory.rs
crates/llm/src/: generate_object.rs
crates/migration/src/: lib.rs  m20260218_01_create_semantic_memory_table.rs  m20260218_02_add_consolidated_at_to_episodic_memory.rs
crates/server/: Cargo.toml
crates/server/src/api/: add_message.rs  mod.rs  recent_memory.rs  retrieve_memory.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/worker/src/jobs/: event_segmentation.rs  memory_review.rs  mod.rs  semantic_consolidation.rs
docs/: ARCHITECTURE.md
docs/architecture/: episodic_memory.md
docs/todo/: boundary_types.md  semantic_memory.md  semantic_memory_extension.md  tool_result_format.md
examples/haru/: package.json
examples/haru/src/: chat.tsx  index.tsx
examples/haru/src/hooks/: use-dotenv-storage.ts  use-haru.ts
examples/haru/src/utils/: dotenv-storage.ts
src/: main.rs  server.rs  state.rs
src/api/: add_message.rs  mod.rs  retrieve_memory.rs  retrieve_memory_raw.rs
src/core/: message_queue.rs
src/core/memory/: episodic.rs
src/utils/: error.rs  mod.rs  shutdown_signal.rs
