[workspace.package]
version = "0.0.1"
authors = ["Moeru AI"]
edition = "2024"
rust-version = "1.91"
description = ""
documentation = "https://github.com/moeru-ai/plast-mem"
readme = "README.md"
homepage = "https://github.com/moeru-ai/plast-mem"
repository = "https://github.com/moeru-ai/plast-mem"
license = "MIT"
publish = false

[package]
name = "plast-mem"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["."]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
fsrs = "5.2.0"
sea-orm = { version = "2.0.0-rc.30", features = [
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#database_driver
  "sqlx-postgres",
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#async_runtime
  "runtime-tokio-rustls",
  # https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime/#extra-features
  "macros",
  "with-chrono",
  "with-json",
  "with-uuid",
  "postgres-vector",
] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["serde", "v4", "v7"] }
