[package]
name = "plast_mem_worker"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "plast_mem_worker"
path = "src/lib.rs"

[dependencies]
plast_mem_shared.workspace = true
anyhow.workspace = true
apalis.workspace = true
apalis-postgres.workspace = true
sea-orm.workspace = true
tokio.workspace = true
